--- a/css/styles.css
+++ b/css/styles.css
@@ -88,3 +88,35 @@ body{
     color: #000;
     border: 1px solid  #000;
 }
+
+.card {
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    line-height: 250px;
+    margin: 10px;
+    width: 250px;
+    height: 250px;
+    transition: all 0.6s ease;
+    transform-style: preserve-3d;
+}
+
+.front, .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.front {
+    background: #2196f3;
+}
+
+.back {
+    background: #b1c4d4;
+    transform: rotateY(180deg);
+}
+
+.card:hover {
+    transform: rotateY(180deg);
+}
