--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body{
+body {
     /* font-family: 'Ibarra Real Nova', serif; */
     font-family: 'Nova Square', cursive;
     font-size: 16px;
@@ -43,14 +43,14 @@ body{
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
-    
+
 }
 
 .first-name {
-    margin-top:150px;
-    color:#fff;
+    margin-top: 150px;
+    color: #fff;
     font-size: 300%;
 }
 
@@ -61,7 +61,7 @@ body{
     padding: 0px 10px;
 }
 
-.sec-header{
+.sec-header {
     padding-top: 50px;
     text-align: center;
 }
@@ -86,7 +86,7 @@ body{
     margin: 5px;
     text-align: center;
     color: #000;
-    border: 1px solid  #000;
+    border: 1px solid #000;
 }
 
 .card {
@@ -101,7 +101,8 @@ body{
     transform-style: preserve-3d;
 }
 
-.front, .back {
+.front,
+.back {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -109,14 +110,25 @@ body{
 }
 
 .front {
-    background: #2196f3;
+    /* background: #b1c4d4; */
+    border: 1px solid #b1c4d4;
+
 }
 
 .back {
-    background: #b1c4d4;
+    background: #2196f3;
     transform: rotateY(180deg);
 }
 
 .card:hover {
     transform: rotateY(180deg);
+}
+
+.ic-images {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
