--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,6 @@ body {
     transform-style: preserve-3d;
 }
 
-.card h4 {
-    margin: 0;
-    /* color: #fff; */
-}
 
 .front,
 .back {
@@ -121,11 +117,18 @@ body {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    background: #b1c4d4;
+
+}
+
+.front h3,
+.back h3 {
+    margin-top: 0.5px;
 }
 
 .front {
-    /* background: #b1c4d4; */
-    border: 1px solid #b1c4d4;
+    background: #b1c4d4;
+    /* border: 1px solid #b1c4d4; */
 
 }
 
