Projects design finalized

--- a/css/resCarousel.css
+++ b/css/resCarousel.css
@@ -42,12 +42,14 @@
     white-space: nowrap;
     font-size: 0;
     vertical-align: top;
+    /* margin-bottom: 50px; */
 }
 
 .resCarousel-inner .item {
     display: inline-block;
     font-size: 14px;
     white-space: initial;
+
 }
 
 
@@ -64,6 +66,8 @@
     background: white;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     margin: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 
