--- a/css/projects-style.css
+++ b/css/projects-style.css
@@ -1,16 +1,24 @@
 .container.p8 .item .tile h3 {
-    text-decoration: underline;
+    font-size: 36px;
 }
 
 .container.p8 .item .tile span {
     font-family: Arial;
 }
 
-.container.p8 .item .tile span ul {
+.container.p8 .item .tile span div {
+    /* background-color: rgba(0, 0, 0, .4); */
+    /* background: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5)100%), url(images/projects/jkp_portal.png); */
+    /* background-image: url('./images/projects/jkp_portal.png') center top no-repeat; */
     font-size: 16px;
     font-weight: bold;
     line-height: 2em;
     padding: 0 40px 0 45px;
+    color: white;
+    /* opacity: 0.2; */
+
+    /* background-image: url('./images/projects/jkp_portal.png') center top no-repeat; */
+    /* background-size: cover; */
 }
 
 .container.p8 .item .tile span strong {
@@ -18,6 +26,9 @@
     font-size: 16px;
 }
 
+.container.p8 .item .tile .project-img:hover {
+    height: 500px;
+}
 
 /* .container.p8 .item .tile span ul>li:nth-child(even) {
     background-color: #d9534f;
