--- a/css/resCarousel.css
+++ b/css/resCarousel.css
@@ -15,6 +15,7 @@
     height: 50px;
     box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, .3);
     border-radius: 999px;
+    transition: all 0.6s ease;
 }
 
 .rightRs {
@@ -28,6 +29,7 @@
     height: 50px;
     box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, .3);
     border-radius: 999px;
+    transition: all 0.6s ease;
 }
 
 .resCarousel {
@@ -35,6 +37,7 @@
     overflow: hidden;*/
     width: 100%;
     position: relative;
+    margin-bottom: 50px;
 }
 
 .resCarousel-inner {
