--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,46 @@ body {
     font-size: 12px;
 }
 
+.down-icon a {
+    font-size: 300%;
+    color: #2196f3;
+    text-decoration: none;
+}
+
+.down-button {
+    position: absolute;
+    bottom: 40px;
+    width: 100%;
+    text-align: center;
+}
+
 .navbar {
     margin-bottom: 0px;
+    padding: 0 15px;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+    background-color: rgba(255, 255, 255, 1);
 }
+
+
+.logo {
+    padding: 5px 5px 5px 15px;
+    margin-top: 10px;
+}
+
+.logo>a:hover {
+    text-decoration: none;
+}
+
+.brand-logo {
+    border: 1px solid #2196f3;
+    border-radius: 50%;
+    padding: 15px;
+    color: #fff;
+    background-color: #2196f3;
+    font-weight: 900;
+}
+
 
 .fill-screen {
     padding-top: 50px;
@@ -96,8 +133,8 @@ body {
 .social a {
     display: inline-block;
     width: 30px;
-    height: 30px;
     margin: 5px;
+    padding: 5px;
     text-align: center;
     color: #000;
     border: 1px solid #000;
@@ -260,6 +297,87 @@ div.progress-bar>span {
     transition: 0.6s ease-in-out left;
 }
 
+h3>span,
+.nav a {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+}
+
+h3>span:hover,
+.nav a:hover {
+    color: #000;
+    cursor: pointer;
+}
+
+h3>span:before,
+.nav a:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -moz-transition: all 0.3s ease-in-out 0s;
+    -ms-transition: all 0.3s ease-in-out 0s;
+    -o-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+h3>span:hover:before,
+.nav a:hover::before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -o-transform: scaleX(1);
+    transform: scaleX(1)
+}
+
+
+.sec-header>h3 {
+    border-top: 1px solid lightgray;
+    padding-top: 20px;
+}
+
+.footer-links {
+    padding: 0 !important;
+}
+
+.footer-copyright>span {
+    color: #000;
+    font-size: 13px;
+    vertical-align: middle;
+}
+
+.footer-social>a {
+    color: #000;
+    font-size: 13px;
+    border: 1px solid #000;
+}
+
+.footer-social a i {
+    padding: 5px;
+    margin: 5px;
+}
+
+.footer-box {
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, .24), 0 0 8px 0 rgb(0, 0, 0, .24);
+    box-sizing: border-box;
+    /* max-width: 320px; */
+    padding-left: 30px;
+    padding-right: 30px;
+
+}
+
 
 @media (max-width: 788px) {
 
@@ -275,16 +393,13 @@ div.progress-bar>span {
         /* margin-bottom: 0; */
     }
 
-    .text-banner{
+    .text-banner {
         margin: 0 12px;
     }
 
 
-    .sec-header>h3 {
-        border-top: 1px solid lightgray;
-        padding-top: 20px;
-    }
 }
+
 
 
 @media (max-width: 500px) {
